assets/scss/control/_plugin-mode.scss
/* ... */
// category
.dnd-category-wrapper {
	.dnd-category {
		.category-head {
			background: #3d4863;
			border-color: #252f47;
			.title {
				color: $white;
			}
		}
		.dnd-category-body-wrap {
			background: #252f47;
		}
		.category-body {
			&::-webkit-scrollbar-track {
				background: rgba($secondary-lighten, 0.4);
			}
			&::-webkit-scrollbar-thumb {
				background: $secondary-lighten;
			}
		}
		.category-footer {
			.btl-create-link-button {
				background: #536082;
				color: #252f47;
				&:hover {
					background: linear-gradient(202deg, #2961ff 0%, #003be2 100%);
					color: $white;
					box-shadow: 0 22px 42px rgba(#003be2, 0.18);
				}
			}
		}
	}
	.dnd-create-category {
		background: $dark-mood-darken;
		.dnd-create-category-text {
			color: $white;
		}
	}
}

// link
.btl-dnd-link {
	background-color: #36405a;
	.btl-dnd-link-body {
		.dnd-link-title {
			color: $white;
			&:before {
				color: darken($secondary-lighten, 10%);
			}
		}
		.btl-dnd-link-button-group {
			.light-tooltip {
				background: #536082;
				color: $white;
				filter: drop-shadow(0px 4px 10.5px rgba(0, 5, 41, 0.04));
				&::after {
					border-top-color: #536082;
				}
			}
			.dnd-link-button {
				color: #697690;
				&:hover {
					color: $white;
				}
			}
		}
	}
	.btl-confirm-message {
		background: #36405a;
		.action-text {
			color: $light-darken;
		}
		.action-set {
			.action {
				color: $white;
				&.yes {
					background: $success-lighten;
				}
				&.no {
					background: $danger;
				}
			}
		}
	}
}

// form
.btl-form-control {
	background: #36405a;
	color: $white;
	border-color: #36405a;
	&::placeholder {
		color: $secondary-lighten;
	}
	&:disabled {
		background: #647397;
		box-shadow: inset 0 2px 4px rgb(255 255 255 / 4%);
	}
}
.dropdown {
	.dropdown-menu {
		background: #536082;
		ul {
			li {
				&:not(:last-child) {
					border-color: #5e6983;
				}
			}
		}
		.link {
			background: #536082;
			color: $light-darken;
			&:hover {
				color: $white;
			}
			&.delete {
				&:hover {
					color: $danger;
				}
			}
		}
		.btl-confirm-message {
			.action-text {
				color: $light-darken;
			}
			.action-set {
				.action {
					color: $white;
					&.yes {
						background: $success-lighten;
					}
					&.no {
						background: $danger;
					}
				}
			}
		}
	}
}

// analytic
.btl-analytic {
	.btl-list-view-calendar {
		background-color: #2c3650;
		border-color: #2c3650;
		color: $light;
		margin-right: 12px;
	}
}
.btl-analytics-heading {
	color: $white;
}
.btl-analytics-filter__heading {
	color: $white;
}
.btl-analytic {
	background: #252f47;
	border-color: #252f47;
	color: $white;
	.btl-analytics-chart {
		border-color: #252f47;
	}
}
.btl-analytic-table-wrapper {
	.rdt_TableHeader {
		background: #252f47;
		color: $white;
	}
	> header {
		background: #252f47;
		.btl-click-filter {
			input {
				background: #252f47;
				border-color: #36405a;
				color: $white;
				&::placeholder {
					color: $light-darken;
				}
			}
		}
	}
	.sc-bBXqnf {
		background: #252f47;
		color: $white;
	}
	.rdt_Table {
		background: #252f47;
		color: $white;
		.rdt_TableCol_Sortable {
			div {
				color: $white;
			}
		}
		.rdt_TableHeadRow,
		.rdt_TableRow {
			background: #252f47;
			color: $white;
			.rdt_TableCol {
				color: $white;
				.rdt_TableCol_Sortable {
					color: $white;
					&:hover {
						color: $white;
					}
				}
			}
		}
		a {
			color: $white;
			&:hover {
				color: $white;
			}
		}
	}
	.rdt_Pagination {
		background-color: #252f47;
		color: $white;
		> div:last-child {
			button {
				svg {
					fill: $white;
				}
				&:disabled {
					svg {
						fill: $secondary-lighten;
					}
				}
			}
		}
	}
}

// date picker
.react-date-picker {
	.react-date-picker__wrapper {
		border-color: #36405a;
		.react-date-picker__inputGroup {
			.react-date-picker__inputGroup__input {
				color: $white;
			}
		}
	}
}

// for tab
.react-tabs__tab-list {
	.react-tabs__tab {
		background-color: #2c3650;
		color: $white;
		&.react-tabs__tab--selected {
			background-color: #252f47;
		}
	}
}
.btl-tab-panel-inner {
	background: #2c3650;
	.short-description {
		background: #252f47;
		color: $light;
	}
	#response {
		color: #fff;
	}
}
.btl-tab-panel-inner .btl-tab-panel-header {
	color: #fff;
}

// form data
.btl-form-group {
	.btl-form-label {
		color: $light-darken;
	}
	.active-status {
		color: $light;
	}
	.btl-modal-select--full {
		.btl-react-select__control {
			background-color: #36405a !important;
			border-color: #36405a !important;
			.btl-react-select__value-container {
				.btl-react-select__single-value {
					color: $white;
				}
				.btl-react-select__input {
					input {
						color: $white !important;
					}
				}
			}
			&.btl-react-select__control--is-focused {
				background-color: #36405a !important;
			}
			.btl-react-select__placeholder {
				color: $white;
			}
		}
		.btl-react-select__multi-value {
			background: #252f47 !important;
			.btl-react-select__multi-value__label {
				color: $white !important;
			}
			.btl-react-select__multi-value__remove {
				svg {
					color: $white;
				}
				&:hover {
					svg {
						color: red;
					}
				}
			}
		}
		.btl-react-select__indicators {
			.btl-react-select__indicator-separator {
				background-color: #666182;
			}
			.btl-react-select__indicator {
				color: $white;
			}
		}
	}
}
.btl-checkbox-field {
	.text {
		color: $white;
	}
	.btl-check:checked + .text:before {
		color: lighten($success, 10%);
	}
	.btl-check:disabled + .text:before {
		background: #647397;
		color: #647397;
		box-shadow: inset 0 2px 4px rgb(255 255 255 / 4%);
		cursor: initial;
	}
}
.btl-radio-group .btl-radio input + span {
	color: $secondary-lighten;
}
.btl-radio-group .btl-radio input:checked + span {
	color: $white;
}
.btl-file-chooser label {
	color: $white;
}
.btl-file-chooser input {
	color: $white;
}
.btl-tooltip {
	span.dashicons.dashicons-info-outline {
		color: #818caa;
	}
}
/* ... */

